<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/historyImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/history_image_desc"/>

        <TextView
            android:id="@+id/historyPrediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/prediction_result"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/historyConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confidence_score"
            android:layout_marginTop="4dp"/>

    </LinearLayout>





</androidx.cardview.widget.CardView>